# typedb

./: .gitignore  Cargo.toml  LICENSE.md  README.md  db.cab
benches/: benches.rs
examples/: custom_types.rs  main.rs  main.rs.bk
src/: .db.rs.swp  .main.rs.swp  \  db.rs  lib.rs  macros.rs  macros.rs.bk  main.rs
tests/: tests.rs  tests.rs.bk
