[package]
name = "kv_cab"
version = "0.5.0-pre"
authors = ["shockham <samuel.hockham@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shockham/kv_cab"
homepage = "https://github.com/shockham/kv_cab"
documentation = "https://docs.rs/kv_cab"
description = "Simple persistent generic HashMap/Key-value store"

[dependencies]
bincode = "0.6"
rustc-serialize = "0.3"
log = "0.3"
fs2 = "0.4.1"
