[package]
name = "typedb"
version = "0.6.0"
authors = ["shockham <samuel.hockham@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shockham/typedb"
homepage = "https://github.com/shockham/typedb"
documentation = "https://docs.rs/typedb"
description = "Simple persistent generic HashMap/Key-value store"

[dependencies]
bincode = "0.7"
serde = "0.9"
serde_derive = "0.9"
log = "0.3"
fs2 = "0.4.1"
