[package]
name = "typedb"
version = "0.8.0"
authors = ["shockham <samuel.hockham@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mount-research/typedb"
homepage = "https://github.com/mount-research/typedb"
documentation = "https://docs.rs/typedb"
description = "Simple persistent generic HashMap/Key-value store"
edition = "2018"

[dependencies]
bincode = "1.0"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
persy = "0.4"
